<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:background="#64000000"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/callView"
            style="@style/BottomDiaologTitleStyle"
            android:text="@string/call" />



        <View style="@style/BottomDialogButtonsSeparator" />
        <TextView
            android:id="@+id/whatsapp_view"
            style="@style/ButtonDialogButtonText"
            android:fontFamily="@font/muli_bold"
            android:background="@drawable/bottom_corner_button_middle"
            android:text="@string/whatsapp"
            android:padding="@dimen/text_size_20"
            android:textColor="@color/text" />
        <View style="@style/BottomDialogButtonsSeparator" />
        <TextView
            android:id="@+id/messageView"
            style="@style/ButtonDialogButtonText"
            android:fontFamily="@font/muli_bold"
            android:background="@drawable/bottom_corner_button_middle"
            android:text="@string/sms"
            android:padding="@dimen/text_size_20"
            android:textColor="@color/text" />
        <View style="@style/BottomDialogButtonsSeparator" />

        <TextView
            android:id="@+id/emailView"
            style="@style/ButtonDialogButtonText"
            android:fontFamily="@font/muli_bold"
            android:background="@drawable/bottom_corner_button_end"
            android:text="@string/email"
            android:padding="@dimen/text_size_20"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/btnCancelDialog"
            style="@style/ButtonDialogButtonText"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:background="@drawable/bottom_button_very_last"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>