<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_address"
        android:fontFamily="@font/muli_bold"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border"
        android:hint="@string/name"
        android:gravity="start|center_vertical"
        android:inputType="text"
        android:textSize="15sp"
        android:padding="10dp"
        android:maxLines="4"
        android:maxLength="150"/>
    <EditText
        android:id="@+id/zipcode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border"
        android:hint="@string/zip_code"
        android:gravity="start|center_vertical"
        android:inputType="text"
        android:textSize="15sp"
        android:padding="10dp"
        android:maxLines="4"
        android:maxLength="150"/>


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border"
        android:hint="@string/address"
        android:gravity="start"
        android:inputType="text"
        android:textSize="15sp"
        android:padding="10dp"
        android:maxLines="4"
        android:maxLength="150"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:layout_marginBottom="6sp"
        android:background="@drawable/dialog_border"
        android:text="@string/done"
        android:textColor="@color/white"
        android:layout_gravity="center"
        app:backgroundTint="@color/colorPrimary"
        android:textSize="15sp" />


</LinearLayout>
