<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_10"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_name"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/size_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/size_5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:fontFamily="@font/muli_bold"
        android:textColor="@color/black"
        android:gravity="right"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_14"
        android:layout_marginTop="@dimen/size_5"/>
</LinearLayout>