<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="@dimen/text_56"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal">
    <LinearLayout
     android:layout_margin="@dimen/text_size_10"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
     android:fontFamily="@font/muli_regular"
      android:layout_weight="1"
      android:gravity="center_vertical"
      android:id="@+id/cancel"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_16"
      android:text="@string/cancel"/>
      <TextView
          android:fontFamily="@font/muli_regular"
       android:layout_weight="1"
       android:gravity="center"
       android:id="@+id/head_title"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:textColor="@color/white"
       android:textSize="@dimen/text_size_16"
       android:text="@string/opportunity"/>

        <TextView
            android:fontFamily="@font/muli_regular"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:text="@string/create"/>


    </LinearLayout>
</LinearLayout>
