<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_qty"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:gravity="center_vertical"
        android:layout_height="44dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border_edit"
        android:hint="@string/qty"
        android:inputType="number"
        android:text="1"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:maxLength="15"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_percent"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/discount_value"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border_edit"
        android:hint="Discount"
        android:text="0"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:maxLength="15"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/tax_value"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:background="@drawable/rounded_border_edit"
        android:hint="Discount"
        android:text="0"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:maxLength="15"/>

    <Button
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:layout_marginTop="@dimen/text_size_20"
        android:gravity="center"
        android:layout_marginBottom="6sp"
        android:background="@drawable/dialog_border"
        android:text="OK"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="15sp" />


</LinearLayout>
